--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,4 +11,5 @@ spec:
   type: service
   lifecycle: production
   owner: "address-index-admin"
-  providesApis: "address-index-api"
+  providesApis: 
+    - "address-index-api"
