--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     github.com/project-slug: backstage-dummy-org/address-index-api
     backstage.io/techdocs-ref: dir:.
+  links: []
 spec:
   type: service
   lifecycle: production
